[package]
authors = ["marcograss"]
description = "Tool to encrypt/decrypt and pack/unpack RouterOS v6.13+ backup files"
edition = "2021"
name = "routerosbackuptools"
version = "0.1.4"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
binrw = "0.15.0"
clap = "4.5.53"
ctr = "0.9.2"
hmac-sha256 = "1.1.12"
rand = "0.9.2"
rayon = "1.11.0"
rc4 = "0.1.0"
sha-1 = "0.10.1"
sha2 = "0.10.9"
walkdir = "2.5.0"
