[package]
authors = ["marcograss"]
description = "Tool to encrypt/decrypt and pack/unpack RouterOS v6.13+ backup files"
edition = "2021"
name = "routerosbackuptools"
version = "0.1.4"

[dependencies]
aes = "0.9.0"
anyhow = "1.0.102"
binrw = "0.15.1"
clap = "4.6.0"
ctr = "0.10.0"
hmac-sha256 = "1.1.14"
rand = "0.10.1"
rayon = "1.11.0"
rc4 = "0.2.0"
sha-1 = "0.10.1"
sha2 = "0.10.9"
walkdir = "2.5.0"
